--- a/AutoML.ipynb
+++ b/AutoML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f23b2072",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ba940b4e",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,10 @@
     "        l = [float(c) for c in line.strip().replace('{','').replace('}','').split(',')]\n",
     "        y.append(l)\n",
     "    #print(line)\n",
-    "    return X, y, output_shape(line)\n",
+    "    problem_type = 'classification'\n",
+    "    if '.' in problem_type:\n",
+    "        problem_type = 'regression'\n",
+    "    return X, y, output_shape(line), problem_type\n",
     "\n",
     "def format_output(vals, out_shape):\n",
     "    strings = []\n",
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "53748839",
    "metadata": {},
    "outputs": [],
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3df2c5b8",
    "metadata": {},
    "outputs": [],
@@ -122,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "85bfa4b5",
    "metadata": {},
    "outputs": [],
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e6b47d89",
    "metadata": {},
    "outputs": [],
@@ -180,18 +183,11 @@
    "id": "02e77ca4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# import sys\n",
-    "\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     print(f\"Arguments count: {len(sys.argv)}\")\n",
-    "#     for i, arg in enumerate(sys.argv):\n",
-    "#         print(f\"Argument {i:>6}: {arg}\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8967ea91",
    "metadata": {},
    "outputs": [],
@@ -208,9 +204,9 @@
     "        output_path = config['train']['output_path']\n",
     "        model_path = config['train']['model_path']\n",
     "        \n",
-    "        X, y, out_shape = parse_inputs(input_path, output_path)\n",
+    "        X, y, out_shape, problem_type = parse_inputs(input_path, output_path)\n",
     "        X, y, out_shape = np.array(X), np.array(y), np.array(out_shape).astype(str)\n",
-    "        model = generate_model(X, y, ['regression', 0])\n",
+    "        model = generate_model(X, y, [problem_type, 0])\n",
     "        history = train_model(model, X, y, epochs = 1)\n",
     "        model.save(model_path)\n",
     "        \n",
@@ -247,10 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e6309a61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14/14 [==============================] - 4s 50ms/step - loss: 0.5193 - mse: 0.1723 - val_loss: 0.3809 - val_mse: 0.1213\n"
+     ]
+    }
+   ],
    "source": [
     "automl()"
    ]
